# iacwkwoppadowapepedemo

./: .env  DEMO_GUIDE.md  LAUNCH_TOKEN_PR.md  PR_SUMMARY.md  README.md  SOLANA_INTEGRATION.md  index.html  jest.config.json  package-lock.json  package.json  sprint2.md  tailwind.config.ts  terminal.md
anchor/: Anchor.toml  DEPLOYMENT_GUIDE.md  package.json  tsconfig.json
anchor/pepelab_program/: Cargo.toml
anchor/pepelab_program/src/: lib.rs
anchor/tests/: pepelab_program.ts
backend/: .env.example  config.ts  raydium.ts  server.ts  token.ts
dev-scripts/: create-token-devnet.js
docs/: SOLANA_LAUNCH.md
public/: _redirects.txt
src/: App.tsx  index.css
src/components/: APILaunchTokenButton.tsx  AddLiquidityButton.tsx  AnalyticsHub.tsx  ConceptCard.tsx  LaunchCard.tsx  LaunchTokenButton.tsx  LaunchTokenModal.tsx  MemeCard.tsx  MemeDetail.tsx  PriceChart.tsx  SimpleLaunchTokenButton.tsx  SimpleLaunchTokenModal.tsx  SimplePhantomWallet.tsx  Sparkline.tsx  TrendRadar.tsx  WalletInfo.tsx
src/components/__tests__/: Analytics.test.tsx  Dashboard.test.tsx  WalletInfo.test.tsx
src/components/sections/: ai-agents-section.tsx  hero-section.tsx  marketplace-section.tsx
src/components/ui/: header.tsx  launch-modal.tsx  memecoin-card.tsx  (+1 more)
src/data/: analytics-memes.json  dashboard.json  mockData.ts
src/hooks/: use-wallet.ts  useWalletPersistence.ts
src/pages/: Analytics.tsx  Dashboard.tsx  Index.tsx  sprint3.md
src/solana/: WalletProvider.tsx  anchorClient.ts  createToken.ts
src/stores/: useLaunchModalStore.ts
src/test/: setup.ts
src/types/: memecoin.ts
(+2 files in other folders)
